--- a/css/queries.css
+++ b/css/queries.css
@@ -1,21 +1,26 @@
-@media screen and (min-width: 500px) and (max-width: 799px) {
+@media screen and (min-width: 500px) {
   .lead {
-    font-size: 1.9em;
+    font-size: 1.8em;
   }
 }
 
-@media screen and (min-width: 750px) and (max-width: 799px) {
+@media screen and (min-width: 700px) and (max-width: 799px) {
   .card {
+    max-width: 75%;
+  }
+
+  .hero-text {
     max-width: 80%;
+    margin: 0 auto;
+    padding: 15px;
   }
 }
 
+/* TODO: Fix this shit now */
 @media screen and (min-width:800px) {
   .card {
-    max-width: 90%;
+    max-width: 85%;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
   }
 
   .hero-text {
@@ -23,12 +28,9 @@
     text-align: left;
   }
 
-  .lead {
-    font-size: 1.7em;
-  }
-
   .graphic {
     order: 1;
+    margin-bottom: 0;
     border-top-left-radius: 0;
     border-top-right-radius: var(--radius);
     border-bottom-right-radius: var(--radius);
@@ -68,7 +70,6 @@
 @media screen and (min-width:1250px) {
   .card {
     max-width: 80%;
-
   }
 }
 
